2.3/src/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neto-multidep
  labels:
    app: multidep-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: multidep-app
  template:
    metadata:
      labels:
        app: multidep-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: nginx-vol
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
      volumes:
      - name: nginx-vol
        configMap:
          name: web-conf-map
          items:
          - key: index.html
            path: index.html
