2.3/src/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neto-ingress-tls
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - neto1.ugly.com
    secretName: neto-tls-secret
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-clusterip
            port:
              number: 9001
      - path: /api 
        pathType: Prefix
        backend:
          service:
            name: service-clusterip
            port:
              number: 9002
